<resources>
    <string name="app_name">7asebat</string>
    <string name="log_in">Log in</string>
    <string name="hint_user">Email</string>
    <string name="hint_pass">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="Remember">Remember Me</string>
    <string name="forgot">Forgot Password</string>
    <string name="facebook_app_id">371724330158909</string>
    <string name="fb_login_protocol_scheme">fb371724330158909</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>


    <string name="menu_home">Home</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_account">account</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_classroom">My Classroom</string>
    <string name="profile">Profile</string>
    <string name="title_activity_home">Home</string>
    <string name="action_settings">Settings</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

</resources>
