<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_griund_login"

    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="200dp"
            android:layout_height="130dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="35dp"
            android:src="@drawable/ic_laptop" />

        <EditText
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/hint_user"
            android:inputType="textEmailAddress"
            android:textColor="#FFF"
            android:textColorHint="#FFF" />


        <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="30dp"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/hint_pass"
            android:inputType="textPassword"
            android:textColor="#FFF"
            android:textColorHint="#FFF"
            app:drawable_hide="@drawable/ic_visibility_white_24dp"
            app:drawable_show="@drawable/ic_visibility_white_24dp" />

        <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
            android:id="@+id/loginbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="30dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/background_login"
            android:text="@string/log_in"
            android:textColor="#000"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="25dp"
            >

            <com.google.android.gms.common.SignInButton
                android:id="@+id/googleBtn"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                >

            </com.google.android.gms.common.SignInButton>
        </RelativeLayout>

        <TextView
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="31dp"
            android:gravity="center_horizontal"
            android:text="Done't have an account"
            android:textColor="#FFF" />

    </LinearLayout>
</ScrollView>
